# opentrons_workflows

./: .gitignore  OT2wrapper.py  README.md  experiment_config.json  get_target_color.py  live_web_demo.py  optimization_workflow.py  pyproject.toml  requirements_api.txt  sshclient.py
backup/: get_target_color.py  optimization_workflow.py
demo/: demo_flex_control.py  demo_ot2_control.py  demo_rest_api_workflow.py  demo_simple.py  ot_flex_demo.py  pdb_samp_prep.py  snar_test.py
examples/: demo_api_v2_advanced_control.py  demo_api_v2_simple.py  demo_flex_gripper_robust.py  demo_flex_robust.py  demo_flex_simple.py  demo_logging.py  demo_ot2_robust.py  demo_ot2_standard.py  demo_status_tracking.py  demo_ui_state_monitoring.py  opentrons_state_tracking_demo.py  simple_usage_demo.py  status_tracking_usage.py  test_deck_enhanced.py  test_labware_api_compliance.py
src/matterlab_opentrons/: OpenTronsControl.py  __init__.py  deck.py  gripper.py  opentrons_control.py  pipette.py  prefect_tasks.py  sshclient.py  well_plate.py
src/matterlab_opentrons.egg-info/: PKG-INFO  SOURCES.txt
src/opentrons-ui/: README.md  __init__.py  ot2_state_monitor.py  web_ui_demo.py
src/opentrons-ui/templates/: ot2_dashboard.html
src/opentrons_workflows/: __init__.py  deck.py  gripper.py  labware_generator.py  logging_config.py  opentrons_control.py  opentrons_control_v2.py  opentrons_sshclient.py  opentrons_states.py  ot2_rest_api.py  prefect_tasks.py  sshclient.py  workflow_orchestrator.py
src/opentrons_workflows.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  ot2_ssh_test.py  test_flex_tailscale.py  test_flex_wifi.py  test_opentrons_control.py  test_ot2_tailscale.py  test_ot2_tailscale_connection.py  test_pipette_tip_demo.py  test_ssh_methods.py  test_ssh_methods_fixed.py  test_states.py
user_scripts/: labware_definitions.py  pdb_samp_prep.py  prefect_setup.py  snar_test.py  sshclient_settings.json  start_ui.py  workflow_dev_notebook.ipynb
users/: readme_opentrons_states.md  readme_ssh_commands.md
