# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]  # Specify setuptools as the build backend
build-backend = "setuptools.build_meta"

[project]
name = "opentrons-workflows"
version = "0.1.5"
authors = [
    {name="Yang Cao", email="cyrilcaoyang@gmail.com"},
    {name="Han Hao", email="clascclon@gmail.com"},
]
description = "A package to control Opentrons OT-2 robots via SSH, with Prefect integration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }                # Specify your license (e.g., MIT, Apache-2.0). Add a LICENSE file.
classifiers = [                           # Standard classifiers for PyPI
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Adjust if you use a different license
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "prefect>=2.0",
    "paramiko>=2.11.0",                  # For SSH connectivity
    "python-dotenv>=0.20.0",             # To handle environment variables
    "nest_asyncio>=1.5.6",
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0"
]

# --- Configuration for setuptools ---
[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "pytest",
]

